--- a/themes/hugo-prose/layouts/_default/list.html
+++ b/themes/hugo-prose/layouts/_default/list.html
@@ -67,7 +67,10 @@
       {{ $summary = ((delimit (findRE "(<p.*?>(.|\n)*?</p>\\s*)+" .Content) "[&hellip;] ") | plainify | truncate (default 200 .Site.Params.summaryLength) (default " &hellip;" .Site.Params.textTruncated ) | replaceRE "&amp;" "&") }}
       {{ end }}
       {{ $summary | replaceRE "^([A-Za-z])" "&$1 opf;" | replaceRE "^(&[A-Za-z]) (opf;)" "$1$2" | safeHTML }}
-      <a href="{{ .RelPermalink }}" class="more" title="Read More...">Read more &rarr;</a>
+<!---
+      <a href="{{ .RelPermalink }}" class="more" title="Read More...">Read more &rarr;</a> 
+--->
+      <a href="{{ .RelPermalink }}" class="more" title="阅读全文...">阅读全文 &rarr;</a>
     </div>
     </td>
     {{ if $.IsHome }}
