调整留言框布局

--- a/themes/hugo-prose/layouts/partials/appendix.html
+++ b/themes/hugo-prose/layouts/partials/appendix.html
@@ -49,4 +49,18 @@
 }</code></pre>
 </div>
 {{ end }}
+
+</section>
+
+<section class="appendix">
+<div>
+  <div class="side side-left"><h3>欢迎留言</h3></div>
+  <script src="https://utteranc.es/client.js"
+        repo="pzhaonet/msg2020"
+        issue-term="pathname"
+        theme="boxy-light"
+        crossorigin="anonymous"
+        async>
+  </script>
+</div>
 </section>
