--- a/themes/hugo-prose/layouts/partials/header.html
+++ b/themes/hugo-prose/layouts/partials/header.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>{{ with .Title }} {{ . }} | {{ end }}{{ .Site.Title }}</title>
     <!-- uncomment this to add favicon -->
-    <!-- <link rel="icon" type="image/png" href="{{ "/icons/favicon.png" | relURL }}" /> -->
+    <link rel="icon" type="image/png" href="../image/favicon.ico" />
     <link rel="stylesheet" href="{{ "/css/style.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "/css/fonts.css" | relURL }}" />
     <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}" />
