--- a/themes/hugo-prose/layouts/partials/appendix.html
+++ b/themes/hugo-prose/layouts/partials/appendix.html
@@ -3,7 +3,7 @@
 {{ if $.Site.Data.authors }}
 {{ if .Params.author }}
 <div>
-  <div class="side side-left"><h3>Author's bio</h3></div>
+  <div class="side side-left"><h3>{{ i18n "authorsBio" }}</h3></div>
   <div>{{ partial "bio.html" . }}</div>
 </div>
 {{ end }}
@@ -20,10 +20,7 @@
 
 {{ with (default .Params.license .Site.Params.license ) }}
 <div>
-<!--
-  <div class="side side-left"><h3>Reuse</h3></div>
--->
-  <div class="side side-left"><h3>重复使用</h3></div>
+  <div class="side side-left"><h3>{{ i18n "reUse" }}</h3></div>
   {{ . | markdownify }}
 </div>
 {{ end }}
@@ -32,12 +29,8 @@
 
 {{ if .Params.author }}
 <div>
-  <div class="side side-left"><h3>引用本文</h3></div>
-  <p>如果您使用了本文的内容，请按照以下方式引用：</p>
-<!--
-  <div class="side side-left"><h3>Citation</h3></div>
-  <p>For attribution, please cite this work as</p>
--->
+  <div class="side side-left"><h3>{{ i18n "citation" }}</h3></div>
+  <p>{{ i18n "citationText" }}</p>
   <pre><code class="no-highlight">{{ with .Params.author }}{{ if (reflect.IsSlice .) }}{{ delimit . ", " }}{{ else }}{{ . }}{{ end }}{{ end }} ({{ (or .Date now).Format "2006" }}). {{ .Title }}. {{ .Site.Title }}. {{ .Permalink}}</code></pre>
   <p>BibTeX citation</p>
   <pre><code class="no-highlight">@misc{
@@ -54,7 +47,7 @@
 
 <section class="appendix">
 <div>
-  <div class="side side-left"><h3>欢迎留言</h3></div>
+  <div class="side side-left"><h3>{{ i18n "comments" }}</h3></div>
   <script src="https://utteranc.es/client.js"
         repo="pzhaonet/msg2020"
         issue-term="pathname"
