--- a/themes/hugo-prose/layouts/_default/sitemap.html
+++ b/themes/hugo-prose/layouts/_default/sitemap.html
@@ -8,7 +8,15 @@
 
 {{ range .Site.RegularPages.GroupBy "Section" }}
   <section class="article-list normal-card">
-  <h2 class="archive-title"><a href="{{ print "/" .Key "/" | relURL }}">{{ .Key | pluralize | title }}</a></h2>
+  <h2 class="archive-title"><a href="{{ print "/" .Key "/" | relURL }}">
+    {{ if (eq .Key "post") }}
+        文章
+    {{ else if (eq .Key "card") }}
+        作者
+    {{ else }}
+      {{ .Key | pluralize | title }}
+    {{ end }}
+</a></h2>
   <ul>
     {{ range sort .Pages "Date" "desc" }}
     <li>
