数学环境：修改 foot_custom.html 里加载 mathjax 的代码

--- a/themes/hugo-prose/layouts/partials/foot_custom.html
+++ b/themes/hugo-prose/layouts/partials/foot_custom.html
@@ -5,7 +5,22 @@
 
 {{ if and (not .Params.disable_mathjax) (or (in (string .Content) "\\") (in (string .Content) "$")) }}
 <script src="//yihui.org/js/math-code.js"></script>
+<!--
 <script async src="//mathjax.rstudio.com/latest/MathJax.js?config=TeX-MML-AM_CHTML"></script>
+-->
+
+<script>
+MathJax = {
+  tex: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    displayMath: [['<code class="katex-escape">$$', '$$</code>'], ['\\[', '\\]']]
+  }
+};
+</script>
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js">
+</script>
+
 {{ end }}
 
 {{ template "_internal/google_analytics.html" . }}
