引用段落用楷体；序言全文用引用段落表示

--- a/themes/hugo-prose/static/css/custom.css
+++ b/themes/hugo-prose/static/css/custom.css
@@ -19,3 +19,8 @@ a:active {
 /* Colors for the footer */
 footer { background: white; }
 .footer, .footer a { color: darkslategray; }
+
+blockquote {
+font-family: "楷体","楷体_GB2312";
+/* text-indent: 2em; */
+}
