--- a/themes/hugo-prose/static/css/style.css
+++ b/themes/hugo-prose/static/css/style.css
@@ -353,7 +353,7 @@ th, td { padding: 5px; }
   .search input, .search #menu-search a { font-size: 1em; }
 }
 
-/* dark theme */
+/* dark theme 
 @media (prefers-color-scheme: dark) {
   body {
     background-color: darkslategray;
@@ -362,3 +362,4 @@ th, td { padding: 5px; }
   img { filter: invert(1); }
   .article-list { box-shadow: 0 0 8px #333; }
 }
+*/
